[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tradebot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "websockets",
    "python-dotenv",
    "cryptography",
    "pyyaml>=6.0.3",
]

[tool.setuptools]
py-modules = ["tradebot", "cbpro", "webfeed", "strategies", "dca"]

[project.scripts]
tradebot = "tradebot:main"
